...
    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    public override func viewDidLoad() {
        super.viewDidLoad()
        title = "Characters"
        tabBarItem = UITabBarItem(title: "Characters", image: UIImage(systemName: "rectangle.stack.person.crop.fill"), tag: 0)
        navigationController?.navigationBar.prefersLargeTitles = true
        
        self.setupView()
        
        viewModel.character.bind(to: self.tableView.rx.items(cellIdentifier: "CharacterTableViewCell", cellType: CharacterTableViewCell.self)) { _, character, cell in
...
        NSLayoutConstraint.activate([
            self.paginationView.bottomAnchor.constraint(equalTo: view.bottomAnchor, constant: -105),
            self.paginationView.centerXAnchor.constraint(equalTo: view.centerXAnchor, constant: 0)
        ])
    }
    
    func setSearchBar(searchController: UISearchController, placeholder: String = "Search", _ searchBarDelegate: UISearchBarDelegate, _ searchResultsUpdater: UISearchResultsUpdating) {
        searchController.searchResultsUpdater = searchResultsUpdater
        searchController.searchBar.delegate = searchBarDelegate
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = placeholder
        self.navigationItem.searchController = searchController
        self.navigationItem.hidesSearchBarWhenScrolling = false
...
