...
                                <color key="backgroundColor" systemColor="labelColor"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="220" id="TxS-rq-7gr"/>
                                    <constraint firstAttribute="height" constant="50" id="Y1J-V1-9nO"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="BACK TO CHARACTERS">
                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
